Change phone number

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 	<title>uyutmaster</title>
-	<meta name="description" content="профессиональное обслуживание кондиционеров 0675697003">
+	<meta name="description" content="профессиональное обслуживание кондиционеров 0974996020">
 	<meta name="Keywords" content="кондиционеры, чистка, Кривой Рог, цена">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -42,8 +42,8 @@
 						<div class="logo logo-f">
 							<span>Уют</span>Мастер</div>
 							<div class="phone-f">
-								<a class="phone" href="tel:067-56-97-003">
-									<i class="fa fa-phone" aria-hidden="true"></i>067-56-97-003
+								<a class="phone" href="tel:0974996020">
+									<i class="fa fa-phone" aria-hidden="true"></i>097-49-96-020
 									<br>
 									<span>Павел</span>
 								</a>
@@ -69,8 +69,8 @@
 									<a  class="a" href="#section4">Контакты</a>
 								</li>
 								<li>
-									<a class="phone" href="tel:067-56-97-003">
-										<i class="fa fa-phone" aria-hidden="true"></i>067-56-97-003
+									<a class="phone" href="tel:0974996020">
+										<i class="fa fa-phone" aria-hidden="true"></i>097-49-96-020
 										<span>Павел</span>
 									</a><br>
 									<span class="city city-f"><i class="fa fa-map-marker" aria-hidden="true"></i>г. Кривой Рог 24/7</span>	
@@ -112,7 +112,7 @@
 									<li>Доступные цены!</li>
 									<li>Качественное обслуживание!</li>
 								</ul>
-								<a class="btn-ph" href="tel:067-56-97-003">
+								<a class="btn-ph" href="tel:0974996020">
 									<i class="fa fa-phone" aria-hidden="true"></i>
 								</a>
 							</div>
@@ -226,8 +226,8 @@
 										</div>
 										<h3>Продажа кондиционеров</h3>
 										<p>Подберем лучший кондиционер для Вас
-											<br>Звоните: 067-56-97-003</p>
-											<a class="btn-ph" href="tel:067-56-97-003">
+											<br>Звоните: 0974996020</p>
+											<a class="btn-ph" href="tel:0974996020">
 												<i class="fa fa-phone" aria-hidden="true"></i>
 											</a>
 										</div>
@@ -373,10 +373,10 @@
 
 									<div class="col-lg-6 col-md-6">
 										<div class="wrap">
-											<a class="btn-ph" href="tel:067-56-97-003">
+											<a class="btn-ph" href="tel:0974996020">
 												<i class="fa fa-phone" aria-hidden="true"></i>
 											</a>
-											<a href="tel:067-56-97-003">тел.067-56-97-003
+											<a href="tel:0974996020">тел.097-49-96-020
 												<br>В любое время ждем Вас! </a>
 											</div>
 										</div>
