--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 	<meta name="theme-color" content="#2074B4">
 	<!-- Custom Browsers Color End -->
 	<link rel="stylesheet" href="css/main.min.css">
+	
+	<meta name="google-site-verification" content="GDypkBtQG1Y3RXTwSXJ321LA4k8xyccx6kyM9cvCQ-g" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160162653-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-160162653-1');
+	</script>
 
 </head>
 
