Change price at promo

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 								<h2>
 									<span>Специально предложение всего </span>3 дня
 								</h2>
-								<p>Чистка - Дезинфекция - Заправка кондиционера фреоном <s>350 грн.</s>
+								<p>Чистка - Дезинфекция - Заправка кондиционера фреоном
 									<br>
-									<span>299 грн.</span>
+									<span>350 грн.</span>
 								</p>
 							</div>
 						</div>
