--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<div class="row">
 							<div class="col">
 								<h2>
-									<span>Специально предложение всего </span>3 дня
+									<span>Специальное предложение всего </span>3 дня
 								</h2>
 								<p>Чистка - Дезинфекция - Заправка кондиционера фреоном
 									<br>
